<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="dbinspector_name">DbInspector</string>

    <string name="dbinspector_launcher_name">@string/dbinspector_name</string>

    <string name="dbinspector_databases">Databases</string>

    <string name="dbinspector_schema">Schema</string>

    <string name="dbinspector_schema_tables">Tables</string>
    <string name="dbinspector_schema_views">Views</string>
    <string name="dbinspector_schema_triggers">Triggers</string>

    <string name="dbinspector_table">Table</string>
    <string name="dbinspector_view">View</string>
    <string name="dbinspector_trigger">Trigger</string>
    <string name="dbinspector_pragma">Pragma</string>

    <string name="dbinspector_pragma_table_info">Table info</string>
    <string name="dbinspector_pragma_foreign_key">Foreign keys</string>
    <string name="dbinspector_pragma_index">Indexes</string>

    <string name="dbinspector_edit">Edit</string>
    <string name="dbinspector_database_name">Name</string>
    <string name="dbinspector_database_version">Version</string>
    <string name="dbinspector_database_path">Path</string>

    <string name="dbinspector_action_import">Import</string>
    <string name="dbinspector_action_clear">Clear</string>
    <string name="dbinspector_action_drop">Drop</string>
    <string name="dbinspector_action_search">Search</string>
    <string name="dbinspector_action_share">Share</string>
    <string name="dbinspector_action_copy">Copy</string>
    <string name="dbinspector_action_settings">Settings</string>
    <string name="dbinspector_action_edit">Edit</string>
    <string name="dbinspector_action_rename">Rename</string>
    <string name="dbinspector_action_history">History</string>
    <string name="dbinspector_action_execute">Execute</string>
    <string name="dbinspector_action_dismiss">Dismiss</string>
    <string name="dbinspector_action_delete">Delete</string>

    <string name="dbinspector_rename_database_confirm">Rename database %s?</string>
    <string name="dbinspector_delete_database_confirm">Delete database %s?</string>
    <string name="dbinspector_clear_table_confirm">Delete the content of the table %s?</string>
    <string name="dbinspector_drop_view_confirm">Drop view %s?</string>
    <string name="dbinspector_drop_trigger_confirm">Drop trigger %s?</string>
    <string name="dbinspector_share_database_failed">Cannot share database %s</string>
    <string name="dbinspector_rename_database_error_blank">Cannot be blank</string>

    <string name="dbinspector_nothing_found">Nothing found</string>
    <string name="dbinspector_give_it_another_try">Give it another try…</string>
    <string name="dbinspector_retry">Retry</string>
    <string name="dbinspector_truncated">Truncated</string>

    <string name="dbinspector_search_by_name">Search by name…</string>

    <string name="dbinspector_error_parameters">Database parameters are missing.</string>

    <string name="dbinspector_title_confirm">Confirm</string>
    <string name="dbinspector_title_error">Error</string>
    <string name="dbinspector_title_preview">Preview</string>

    <string name="dbinspector_preview_failed">Cannot copy content to clipboard</string>
    <string name="dbinspector_preview_success">Content copied to clipboard</string>

    <string name="dbinspector_webserver">Web server</string>
    <string name="dbinspector_webserver_description">Run an API and web server for remote access.</string>
    <string name="dbinspector_webserver_address">Address and port</string>
    <string name="dbinspector_webserver_start">Start server</string>
    <string name="dbinspector_webserver_stop">Stop server</string>
    <string name="dbinspector_webserver_disabled">Disabled server</string>
    <string name="dbinspector_webserver_system_ports">Cannot use system or well-known ports</string>
    <string name="dbinspector_webserver_dynamic_ports">Cannot use dynamic, private or ephemeral ports</string>
    <string name="dbinspector_webserver_unsupported_port">Cannot use this port</string>
    <string name="dbinspector_webserver_empty_port">Cannot use empty port</string>

    <string name="dbinspector_ignored_table_names">Ignored table names</string>
    <string name="dbinspector_ignored_table_names_description">Add or remove names of tables. When adding multiple entries, they must be comma delimited.</string>
    <string name="dbinspector_add_table_name">Add table name</string>

    <string name="dbinspector_content_wrapping">Content wrapping</string>
    <string name="dbinspector_content_wrapping_description">Number of lines used to preview large amount of any data.</string>
    <string name="dbinspector_limit_maximum_number_of_content_lines">Limit maximum number of content lines</string>
    <string name="dbinspector_toggle_truncating">Toggle truncating large data preview on specified position.</string>
    <string name="dbinspector_truncating_start">Start</string>
    <string name="dbinspector_truncating_middle">Middle</string>
    <string name="dbinspector_truncating_end">End</string>
    
    <string name="dbinspector_blob_preview">Blob preview</string>
    <string name="dbinspector_blob_preview_description">Preferred preview format for blob type data.</string>
    <string name="dbinspector_blob_preview_placeholder">Placeholder</string>
    <string name="dbinspector_blob_preview_utf_8">UTF-8</string>
    <string name="dbinspector_blob_preview_hexadecimal">Hexadecimal</string>
    <string name="dbinspector_blob_preview_base64">Base64</string>
</resources>
