<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context="im.dino.dbview.DbViewActivity">

    <item
            android:id="@+id/dbinspector_action_search"
            android:title="@string/dbinspector_action_search"
            android:orderInCategory="100"
            app:actionViewClass="android.support.v7.widget.SearchView"
            android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
            app:showAsAction="collapseActionView|always"/>
    <item
            android:id="@+id/dbinspector_action_copy"
            android:title="@string/dbinspector_action_copy"
            android:orderInCategory="101"
            android:icon="@drawable/abc_ic_menu_copy_mtrl_am_alpha"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/dbinspector_action_import"
            android:title="@string/dbinspector_action_import"
            android:orderInCategory="102"
            android:icon="@drawable/ic_file_download_white_24dp"
            app:showAsAction="ifRoom"/>
</menu>
